# python-sdk

./: LICENSE  Makefile  Manifest.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  bench.py
examples/cfs/: json.py  list.py  toml.py  zip.py
examples/cfs/data/: example.json  example.mediumlist  example.shortlist  example.toml
examples/cnet/: http.py  pg_connection.py  pg_parameters.py  zmq_dealer_router.py  zmq_pub_sub.py  zmq_push_pull.py  zmq_task_processor.py
examples/ctime/: basic_clocks.py  datetime_formatting.py  datetime_range.py  rfc2822.py  str_range.py  transforms.py  utc_vs_local.py
examples/cuuid/: generation.py
src/sdk/: __about__.py  __init__.py  evlib.py
src/sdk/cfs/: __init__.py  arrow.pxd  arrow.pyi  arrow.pyx  flist.pyi  flist.pyx  json.pxd  json.pyx  toml.pyx
src/sdk/cnet/: __init__.pxd  __init__.py  cy_parameters.pxd  cy_parameters.pyi  cy_parameters.pyx  fzmq.pyx  http.pxd  http.pyi  http.pyx  parameters.c  parameters.h  parameters.pyi  zmq.pyi  zmq.pyx
src/sdk/ctime/: __init__.pxd  __init__.py  clock.pyi  conversions.pxd  conversions.pyx  iterators.c  iterators.h  iterators.pyi  ranges.c  ranges.h  ranges.pyi  rfc2822.pxd  rfc2822.pyx
src/sdk/cuuid/: __init__.pxd  __init__.py  tohex.h  tohex.pxd  uuid.pxd  uuid.pyx  uuid4.pxd
tests/: test_cfs.py  test_cnet.py  test_ctime.py  test_cuuid.py
